--- a/src/toolkit/email.html
+++ b/src/toolkit/email.html
@@ -1,7 +1,7 @@
 <div style="font-family: 'Poppins', sans-serif; font-weight: 500; font-style: normal; color: rgb(79, 79, 79);">
 
     <div style="max-width: 750px; margin: 0 auto; background-image: url(https://media.canva.com/1/image-resize/1/800_796_100_PNG_F/czM6Ly9tZWRpYS1wcml2YXRlLmNhbnZhLmNvbS9CRE1iMC9NQUdGSXBCRE1iMC8xL3AucG5n?osig=AAAAAAAAAAAAAAAAAAAAAHCIoxQvbpfQXSWJ_fQ3xX1EABbfe-me7n-jtRPov5Gk&exp=1715646102&x-canva-quality=screen&x-canva-subsampling=T&csig=AAAAAAAAAAAAAAAAAAAAAJ9xo1VfX_TL3xYM0MRppzBP1cbMKRqsvLfnn6zrw1Hi); background-position: right 82%; background-repeat: no-repeat; background-size: 35%;">
-        <header style="background-color: rgb(31, 41, 55); height: 150px; display: flex">
+        <header style="background-color: rgb(31, 41, 55); height: 100px; display: flex">
             <img src="https://embajadoras.mx/assets/logo_presidentas_letras.a260cd35.png" alt="Embajadoras Logo"
                 style="width: 200px; margin: auto;" />
         </header>
@@ -27,7 +27,9 @@
             Sin más por el momento le enviamos saludos.
         </div>
         <br>
-        <div style="display: flex;  width: 100%; background-color: #1f2937; color: #ffffff; text-align: center; padding: 15px 0;">
+       
+        </div>
+        <footer style="display: flex;  width: 100%; background-color: #1f2937; color: #ffffff; text-align: center; padding: 15px 0;">
             <div style="text-align: center; width: 100%; margin: auto; z-index: 29; font-size: x-small;">
                 <span>Embajadoras ® <a href="https://embajadoras.mx/" style="color: #e46f88; text-decoration: none;">https://embajadoras.mx/</a></span>
                 <br />
@@ -35,8 +37,7 @@
                 <br />
                 ERPP Corporativo | Balmes 11 | Col. Polanco, CDMX C.P.1151
             </div>
-        </div>
-        </div>
+        </footer>
     </div>
 
    
